--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,40 @@
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f0f0f0;
-  margin: 0;
+  margin: 20px;
   padding: 0;
 }
 
 h1 {
   color: #333;
+}
+
+#countries-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap:20px;
+  margin-top: 60px;
+}
+
+.country-card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1 solid grey;
+  max-width: 220px;
+
+}
+
+.flag-img {
+  width: 200px;
+  border-radius: 6px;
+
+}
+
+.country-name {
+  font-weight: 600;
+
 }
